feat(*): deploy with ansible + supervisord for manage running state